--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- JUnit Jupiter API -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
@@ -42,16 +43,23 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- JUnit Jupiter Engine -->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-            <version>8.0.27</version>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.8.0</version>
+            <scope>test</scope>
         </dependency>
 
+        <!-- JUnit Vintage Engine (for running JUnit 3 and 4 tests) -->
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
+            <version>5.8.0</version>
+            <scope>test</scope>
         </dependency>
+
+        
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
