--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,11 @@
             <artifactId>webdrivermanager</artifactId>
             <version>2.2.5</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+        </dependency>
 
     </dependencies>
 
